--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,4 +41,4 @@ jobs:
       run: npm i --g surge
       
     - name: deploy on surge 
-      run: surge ./build http://expense-assignment.surge.sh/ --token ${{secrets.SURGE_KEY}}
+      run: surge ./build http://ex-assignment-1.surge.sh/ --token ${{secrets.SURGE_KEY}}
